# sentence-transformers-grpc

./: Dockerfile  LICENSE  README.md
pb/: sentence_transformers.embedding.proto
sentence_transformers/: README.md  pyproject.toml  pytest.ini  server.py
sentence_transformers/pb/sentence_transformers/embedding/: __init__.py
sentence_transformers/tests/: sentence_transformers_test.py
